# DeclarativeGraphics-JS

./: DeclarativeGraphics-JS.cabal  README.md  stack.yaml
app/: Main.hs
src/Graphics/Declarative/Canvas/: Shape.hs  TangoColors.hs
src/Graphics/Rendering/: Canvas.hs
