name:                DeclarativeGraphics-JS
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/DeclarativeGraphics/DeclarativeGraphics-JS#readme
license:             BSD3
license-file:        LICENSE
author:              Philipp Krüger
maintainer:          matheus.dev@gmail.com
copyright:           2017 Philipp Krüger
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Rendering.Canvas
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , ghcjs-dom
                     , DeclarativeGraphics
  default-language:    Haskell2010

executable main
    main-is: Main.hs
    build-depends:     base >=4.2 && <5
                     , mtl
                     , ghcjs-dom
                     , DeclarativeGraphics-JS
    hs-source-dirs: app
    ghc-options: -threaded

source-repository head
  type:     git
  location: https://github.com/DeclarativeGraphics/DeclarativeGraphics-JS
