name:                DeclarativeGraphics-JS
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/DeclarativeGraphics/DeclarativeGraphics-JS#readme
license:             BSD3
license-file:        LICENSE
author:              Philipp Krüger
maintainer:          matheus.dev@gmail.com
copyright:           2017 Philipp Krüger
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Rendering.Canvas
                     , Graphics.Declarative.Canvas.Shape
  build-depends:       base
                     , mtl
                     , linear
                     , ghcjs-dom
                     , DeclarativeGraphics
  default-language:    Haskell2010

executable main
    main-is:           Main.hs
    build-depends:     base
                     , mtl
                     , linear
                     , ghcjs-dom
                     , DeclarativeGraphics
                     , DeclarativeGraphics-JS
    hs-source-dirs:    app
    ghc-options:       -threaded
    default-language:  Haskell2010

source-repository head
  type:     git
  location: https://github.com/DeclarativeGraphics/DeclarativeGraphics-JS
